Update project readme with Building and Release link